@@ -1,32 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST isync-1.0.6.tar.gz 188572 SHA256 e543767a5e36574256e8c25ba43acd6666df060fdf5f6a7029b127560d87632f SHA512 d22d45445396742f34b249837f46e61caa6d55933b0dd1ae74272d6baea5cce520adaed59ed3b34be5ca43b8793e0002b8db43b64cf47698abca1194db4da5d3 WHIRLPOOL a3533275f5fb2b1a16ccc8929d505f1a93b0884629d8b9653b5b486564986779e811b641399aca4c0144ff247dfef9039ce02f660051fbaac571ccbca488d7f9
 DIST isync-1.1.0.tar.gz 249374 SHA256 51f5618c239013fb770f98ae269f24ee417214efaaf7e22821b4a27cf9a9213c SHA512 6503c1d8ba412274a09f468994a54dd2d13af2601da3dbfe1ba3f8aefc33cb2a5effd2ca66fcff1c5224ce80ffb11c42d8f362f7cc6409760c32e4031ea87744 WHIRLPOOL 8d2af42cfc430eda29aff54628195df5fca8d0129747418e403b44174f9797b4b21f07adadf49a1064e340f640aba7307bb4bfa50d342ad2fa71b91c76e3cca9
 DIST isync-1.1.1.tar.gz 256217 SHA256 c3a5fdcde1f4627137a0cbb66bebbb12bde4873deb872442be0b1d7a617f7491 SHA512 afd66319febebcf7a7857d78013c7137f48222478f6a9465409e4a85c18e899bcf08bcf5baac2a5fcc95b8a0af1877983159b5e3bd20d679fdcca32e77471ca7 WHIRLPOOL 28a4f34ecb5df6ee115d1906c28eeb8522392755dffc973e29db9c146fbbc7473b8bb562388b427baec13bc655fc0e975f71fac62bdd9b4ee09f9b267f531c93
 DIST isync-1.1.2.tar.gz 260177 SHA256 a225b5d5915b6e0f9da303caa6b4db1ee06241e98c1ad0a662e5dcea0654c0a4 SHA512 e71a52d9244564ff14e22cc28e0914055d47b2dcfaf5054ffa9964829dcb7a599b656217576fedd5d37e611552db57da2129ce1b5a89c0881453304970321074 WHIRLPOOL 7fd9cebe22194ec8ae018c1952272b0f1c6667ceb6cff99cb2a3c56653f17202a133e61cde0aeab862c14185f03de2a188b1fbee812b82e8a2c203985a833216
+DIST isync-1.2.0.tar.gz 278536 SHA256 833878de1647d403cb56984757cc416094ee037c5388a0f1d1f74084f6e60e59 SHA512 5e31220138df61ecb6694082d39af0450b03d7dcebc4052489742bebb0436b8361d7ea6d85490450b99959b4b1e9faa76bffa8b403178e18f732ff8f179ff56e WHIRLPOOL 39940471ec0ad1d6297c0042362891aaf88485169671ad0802dedbd810c591d433e1ebd4230a992a7419ad64b47e1a4c4ef776a52c77b83952900ee185505944
 EBUILD isync-1.0.6.ebuild 674 SHA256 44e901bfe8caaebd2be8e7284bec3c2bbdf70087ea7a5b90305de7ea1cfc31bf SHA512 216987e4ce03e82d1aecd89c84193ad64c33a47ed017e270575188b9c8a9f808786198a0f22aeb12dca524797036ea2970d81edc8192388df3595312e22b63a5 WHIRLPOOL 9e6547e4d171793acb6c685d51bc506d3e771d4fd3a6f6befbce7edb7a3e14b73c6ea797c87ef1cdc5edc914b58b19eb79d23397f85f9fe87e5c165b1ba7a2fe
 EBUILD isync-1.1.0.ebuild 607 SHA256 52abb8d6b54e51f5a70c2a7e5fe7b7600c3a4c90de0015647d61dc47b5544b1e SHA512 ed7bcdd91e676fc4b4ddaab2620eb9e554711843ce39bb7670ad4226bf95b502f423d261f659b831b9114ce22a636dd10500ada0fa22d738fad35c697c9fc287 WHIRLPOOL 1c60a4172ccb71635d2a9aee91a43e9229a89610488fbc9d18d788567ee6bf307d7a190144e754a2a0d5ec092a811c384067cf178d0c22ac9a56d662048f85f0
 EBUILD isync-1.1.1.ebuild 592 SHA256 99a07ff4204fe2ed041f05665574e525cc1d7db5a70fc45a4b1adab2b369b2ca SHA512 9399570309729870dddd555463d022cbc1a170c5b66964a369648fd17ff7a962e3d61aec8d3d0adbef0dbaa9018b5854f66394f9eedd31acf2380f927b96da9b WHIRLPOOL c77ece5e14505e7f90b54ed79748d105845c97873e8fdb67fb8df7402cc083751aa3d50288ccfb58ad6539ff4ef943c5bbd36ee83f48f7732376555cd091df76
 EBUILD isync-1.1.2.ebuild 592 SHA256 28855979c293b08d3768a1db9265c98eeef04681a3c583f0edc167bb53970fde SHA512 2822c83f95274caec313a10258cff048303a9a87c1dd43b385b1e0459065a8115fd0571dc402fd719b1bba37f5a864d7c2dc93ddf69f358850a52e348f6656f6 WHIRLPOOL 6793f489dc380364354ba542eac8d362777077be07692316d9f2c18da6e690fb04d601e16f0bb5867bdc5960e6e4d1de40277c10d93b318611c6c4d5878a8a2a
-MISC ChangeLog 3437 SHA256 432589aa3f43f9f41219ee9fbf4801d3240746ccecb7211b5350e3342063a3f5 SHA512 b6b063b95f5d378facf7d498797643bfececd6d79ec41fbeffdf3047015dd8b2193801be1ce96016386a7ca0eda1762b0cd44fa05903566f5b285e01bbb53ef8 WHIRLPOOL 718fa86e4ca56797caaf70a12f5499bd2495cd2bb8a3b8f42d48a17e18e03f200b5e6ed71529f9cf1836b9476a10468b039e8a3e367ab53edae22bce861ff2ca
-MISC metadata.xml 237 SHA256 fe58ef361acafaa54fd16e6bc92e1df8ea0e014b0986b51b1ffb9beb833fdd68 SHA512 ea9992d429793e5159c07567eabb2dc34593ad2350ed564a1bc6c7c0cc503b91bb7cc6ede206bc22b7cdf8f5731604c8a2b99f029b8546bc8f038b2be39a7382 WHIRLPOOL 29207ff68ab8f3ef3e3ede64a56bbf330ac40b412da316fd21d98c0e650b556ac586a8b23c47b082bed6ace4aa576280296e76ce5e8d4e16943005d892f776de
+EBUILD isync-1.2.0.ebuild 737 SHA256 d2c552a5cba15cbb6fc11a78a65d9253f4d49bf778fdae892943da777de5046e SHA512 1e7caea5cbf339798beca6b3b5f3ee78abeb5a39581cc1e5b100a974d43aa5615e2d2aba0eebf60326d123e7fe5f3e22b2688020df844979cf9a08d2c149911e WHIRLPOOL 58f54369cc293218b475262ec776415ec66eeb01ccc7ed849441835049247fa0677a2a6f2d68137fbdb784c0e06402e00424d8197c0abe0a1deb6c4c0a7d4264
+MISC ChangeLog 3575 SHA256 94050c9944f370308f3d3eafee9acb5264acd495f930b5e9079f502e296b14c3 SHA512 33089186a62c55f50f489809c51aec26c6319c490593942a00996bf99fe485b2177ab8375cda821fd0470aa7e1e16caef8f6d72c3520db7b82ffb78be676bff1 WHIRLPOOL ad40963900169270a46ebdd471c779f27e79c7de341c71288012f640708141e8cd02fbac618fe5440227e9e6deea9540428750798f3a0bbf07a8eb66f71f37be
+MISC metadata.xml 305 SHA256 f3b95849175bc91b74734970a65cbb738525cbfdb39df146bfce19ac5f74fe99 SHA512 9f4f9d620ffe2ef9b7c88e31d251d18b7975e2941f5e88e42d5d604c5eb6bf36c62ccc16578466610ddb687f5efb9fe83be8961fcc76e0672d7cef79a65ff434 WHIRLPOOL b6b05fab5e9d931a953d694f1a36cfbdb8fd9b4faf690c90ab96cdb504a69cfb864725144f1168e2eaf92d7586d5639ab5c5a5c42b572b0cacac007d0a5a14e9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVfw99XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiNG4P/jLTwNlx0f+hGP+vbev6d5C5
-stnS2Cp2bQdV+osr9vCO1YqeIy7JhzMAM9g4+LME5wNFo6MaWnslCKUJA7pqljA8
-SXgRSqD6OlR7fRQlTVCnEy6TBIwObffGkqi1BZdK0XnT0UgGSaxr3AKVj8KAzrD7
-kvDE+u3BmTfNw2bnvUMPWNPosiFUyL+jfoEmuX3Qs9n3wlDG13C76fDmdURWiRmo
-q75NMd0HahC5rkncIFDW8vHrVqQpXgQXUlxONF5SsXP13K+WINhPCxQyb1A1Brrm
-CDRntf2hJLu1gwLeCUGqR/SKjRnSHvEzdRtaTGZ9lNzk92AZ1JiVxC+aWKjDyMhB
-tiFEpjn5e/9w44HGVHV8RXK7QjGHCuuvF375h2slHITrCQ/81DCM27y4vpu9Ys4a
-QDCDi2Z2qUFU+Uxw4Rn4Jrn/eGmDaQt9WOE/9KS2fj5+R8aiiEHhJc7zg98frQ8G
-XZm8xgaQtrLPeBK7RxqI+47WijeF/FIOAHjccLI5+gmfv/lpE9WcLnmRu4BZ3+Y7
-uRc0NeQ0N/ln0wHKCiiwRVOhihVfRmJdwrZp2ZSVpW8uSaoWe5zoG4vYO8VZ9kcE
-eBnaM+0Y47t7F9Ij1VFB0qvuthleREw8+MtVlUhQNEAygUyKPLYbIZ+xXbnbx8IQ
-wiM1DJ/O9Aiwds4gYSKf
-=SpON
+iF4EAREIAAYFAlXCkVgACgkQXYk9GL8g3FG5XwD/XP0EJlo32VK6xjbcBVQYUKWX
+LW7E9EJktNMoAD7PbWgA/i9QqHkh2m2ZsfX5ca44kKVERo2+eHRqQeUbuU0fIn4F
+=1OnM
 -----END PGP SIGNATURE-----
