@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/isync
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/isync/ChangeLog,v 1.26 2015/01/26 23:50:05 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/isync/ChangeLog,v 1.27 2015/08/05 22:42:26 alonbl Exp $
+
+*isync-1.2.0 (05 Aug 2015)
+
+  05 Aug 2015; Alon Bar-Lev <alonbl@gentoo.org> +isync-1.2.0.ebuild,
+  metadata.xml:
+  Version bump, bug#548406
 
 *isync-1.1.2 (26 Jan 2015)
 
